syntax = "proto3";

package protobuf;

import "entry.proto";

option go_package = "protobuf/";

message RequestVote {
    MexType ty = 1;
    uint64 Term = 2;
    string CandidateId = 3;
    uint64 LastLogIndex = 4;
    uint64 LastLogTerm = 5;
}
